tests/typescript/neg/simple/asgn-00.ts
var a = 1;


a = "aaa";
